Add html plugin and create dev enironment

--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,3 @@
-@font-face {
-  font-family: 'MyFont';
-  src: url('./Roboto-Italic.ttf') format('woff2');
-  font-weight: 600;
-  font-style: normal;
-}
-
 .hello {
-  color: red;
-  font-family: 'MyFont';
-  background: url('./icon.png');
-  background-repeat: no-repeat;
-  }
+    background-color: rgb(238, 22, 227);
+};
